fixed some layout issues

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -14,6 +14,12 @@
 {
     background: transparent !important;
 }
+.cb{
+  color:black;
+}
+.bw{
+  background:white;
+}
 .container-fluid{
   padding-left:0;
   padding-right:0;
